[package]
name = "lamella-ves"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Lamella virtual execution system: a CIL interpreter implemented from ECMA-335."

[dependencies]
lamella-cil = { path = "../lamella-cil" }
lamella-token = { path = "../lamella-token" }

[features]
default = ["bcl", "exceptions", "gc", "finalizers"]
# The BCL intrinsics (System.Console / System.String / Object..ctor). Off => the
# minimal interpreter core (arithmetic, control flow, the object model) with no BCL
# surface -- the smallest build for a constrained target. The runtime side of a
# capability-profile surface knob.
bcl = []
# Structured exception handling (throw / try-catch / finally). Off => those opcodes
# are unsupported and the unwinder is stripped under LTO -- the smallest tier, where a
# fault terminates rather than unwinds. A capability-profile knob.
exceptions = []
# The moving (mark-compact) garbage collector. Off (the `gc = none/marshal` tiers) =>
# the bump arena with no collector, root machinery compiled out -- the no-GC driver /
# tiny-target profile. A capability-profile knob.
gc = []
# Object finalization: destructors / Finalize via an f-reachable queue run at a GC
# safepoint, plus GC.SuppressFinalize / ReRegisterForFinalize and resurrection. Requires
# `gc` (only a collector detects unreachability). Off => no finalization machinery, the
# embedded default. A capability-profile knob.
finalizers = ["gc"]

[lints]
workspace = true
