[package]
name = "lamella-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Embedding the Lamella interpreter (WebAssembly and other hosts): run an assembly, capture its result."

# cdylib produces the host-agnostic .wasm; rlib lets the core be used natively and tested.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lamella-load = { path = "../lamella-load" }
lamella-metadata = { path = "../lamella-metadata" }
lamella-cil-runtime = { path = "../lamella-cil-runtime" }
# The DAP feature pulls in the debugger and a JSON codec for its wire messages.
lamella-dap = { path = "../lamella-dap", optional = true }
# The compile feature pulls in the compiler (source -> assembly) for in-page builds.
lamella-assemble = { path = "../lamella-assemble", optional = true }
# Completion (IntelliSense) drives the binder + parser directly.
lamella-binder = { path = "../lamella-binder", optional = true }
lamella-syntax = { path = "../lamella-syntax", optional = true }
serde_json = { version = "1", optional = true }
# The AOT backend, for the in-page chip/wasm exporter (lamella_aot_build). Default features bring the
# ARM32 backend (chip images); enable lamella-aot's `wasm` feature too for the C# -> .wasm widget path.
lamella-aot = { path = "../lamella-aot", optional = true }
# The py feature pulls in the Python front end + runtime for the in-page Python runner.
lamella-py-frontend = { path = "../lamella-py-frontend", optional = true }
lamella-py-runtime = { path = "../lamella-py-runtime", optional = true }
# The repl feature pulls in the carrier-neutral tier-0 REPL engine for the in-page C# REPL. Its
# default features (the serial carrier + the csc `repl-host` front end) are host-only and not
# wasm-buildable, so take only the carrier-neutral core (--no-default-features); this crate supplies
# the compiler (over `compile`) and uses the engine's in-process LoopbackLink for the run side.
lamella-wireline = { path = "../lamella-wireline", optional = true, default-features = false }

[features]
# Adds the lamella_selftest export (embeds a fixture) so a wasm host can validate
# the module end to end with a single --invoke. Off by default; not in the drop.
selftest = []
# Adds the in-page DAP agent (lamella_dap_create/request/dispose) for browser
# debugging. Off by default so the run-only .wasm stays lean (no serde).
dap = ["dep:lamella-dap", "dep:serde_json"]
# Adds the in-page compiler (lamella_compile: C# source -> assembly + PDB + diagnostics)
# and completion (lamella_complete: IntelliSense) so Studio builds + assists the user's
# own code client-side. Off by default.
compile = [
    "dep:lamella-assemble",
    "dep:lamella-binder",
    "dep:lamella-syntax",
    "dep:serde_json",
]
# Adds the in-page AOT exporter (lamella_aot_build: CIL -> a flashable chip image, e.g. micro:bit, or
# a .wasm widget) so Studio compiles the user's C# all the way to a microcontroller image client-side.
aot = ["dep:lamella-aot"]
# Adds the in-page Python runner (lamella_py_run: Python source -> compile + run main() -> rendered
# result + diagnostics) so Studio compiles + runs the user's Python client-side. Off by default.
py = ["dep:lamella-py-frontend", "dep:lamella-py-runtime"]
# Adds the in-page stateful C# REPL (lamella_repl_new/eval/reset) over lamella-wireline's
# carrier-neutral tier-0 REPL engine, so Studio runs the SAME read-compile-eval-print engine the
# CLI does. Pulls in `compile` (the in-wasm compiler the REPL's compile seam wraps). Off by default.
repl = ["dep:lamella-wireline", "compile"]

[lints]
workspace = true
